<resources>
    <string name="app_name">Project Pandora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home_text">Home</string>
    <string name="nav_chat_text">Chat</string>
    <string name="nav_services_text">Serviços</string>
    <string name="nav_settings_text">Perfil</string>

    <string name="tx_avaliation">Avaliações</string>
    <string name="btn_contratar">Contratar</string>

    <!-- Settings -->
    <string name="tx_alterar_email">Alterar E-mail</string>
    <string name="tx_alterar_senha">Alterar Senha</string>
    <string name="emailPlaceholder">Email...</string>
    <string name="passwordPlaceholder">Senha...</string>
    <string name="enterButtonText">Entrar</string>
    <string name="logoDescription">logo</string>
    <string name="errorTitle">Erro de conexão!</string>
    <string name="errorText">Parece que ocorreu um erro ao tentar se conectar com o nosso serviço, verifique a conexão com a internet e tente novamente!</string>
    <string name="tryAgain">Tentar Novamente</string>
    <string name="featuredTitle">Serviços Populares</string>
    <string name="editTextplaceholder">Pesquisar serviço...</string>
    <string name="comingSoonTitle">Funcionalidade em construção!</string>
    <string name="servicesTitle">Todas as solicitações</string>

    <!-- Solicitações -->
    <string name="description">Descreva sua solicitação</string>
    <string name="status">Status:  </string>
    <string name="toastSend">Solicitação enviada ao prestador!</string>
    <string name="filterSolicitado">Solicitado</string>
    <string name="filterAprovado">Aprovado</string>
    <string name="filterExecucao">Execução</string>
    <string name="filterFinalizado">Finalizado</string>
    <string name="sign_out">Sair</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="telefone">Telefone:</string>
    <string name="email">Email:</string>
</resources>