<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_filter_solicitations"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_solicitado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterSolicitado"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_aprovado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterAprovado"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/rb_execucao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterExecucao"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/rb_finalizado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterFinalizado"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>


</LinearLayout>

