<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/Background"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/iconSize"
        android:layout_height="@dimen/iconSize"
        android:src="@drawable/ic_logo"
        app:tint="@color/Primary"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/comingSoonTitle"
        android:contentDescription="@string/logoDescription" />

    <TextView
        android:id="@+id/comingSoonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/errorTitle"
        android:textSize="@dimen/titleSize"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/errorText"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/errorText"
        android:textSize="@dimen/textSize"
        android:gravity="center"
        android:layout_margin="@dimen/defaultMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comingSoonTitle"
        app:layout_constraintBottom_toTopOf="@id/tryAgainButton"/>

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/bigMargin"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tryAgain"
        android:textColor="@color/Background"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorText" />

</androidx.constraintlayout.widget.ConstraintLayout>